# UAV-gstreamer-jetson

./: .gitignore  README.md  getting_started.html  index.html  main.py  notes.md  requirements.txt  runcams  search.json  setup.cfg  sitemap.xml
api/: airsim.client.html  camera.gst_cam.html  gstreamer_python_doc.html  index.html  mavlink.camera.html  mavlink.viewsheen_gimbal.html  params.html  template.html  utils.display.html  utils.general.html
config/: jetson_cam_0.toml  jetson_cam_1.toml  jetson_cam_2.toml  jetson_cam_3.toml  jetson_server_config.toml
examples/: run_server.py
expt/: detector.html
scripts/: gst-rcv.sh  gst_send_all.sh  pylon.sh  run_startup.service  runserver.service  setup-services.sh  usbfs-1000.sh  usbfs1000.service
snapshots/: create_video.py
src/UAV_gui/: run_client_gui.py
src/UAV_jetson/: run_server.py
src/examples/: howto_access_features.py
tutorials/: airsim_walkthrough.html  index.html  mav_camera_walkthrough.html  template.html
