[metadata]
name = UAV_jetson
version = attr: UAV_jetson.__version__
author = You
author_email = your@email.address
url = https://xebia.com/blog/a-practical-guide-to-setuptools-and-pyproject-toml
description = Example package description
long_description = file: README.md
long_description_content_type = text/markdown
keywords = UAV_jetson, setuptools
license = MIT
classifiers =
    License :: OSI Approved :: MIT
    Programming Language :: Python :: 3

python_requires = >=3.8

[options]
package_dir = =src
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    imutils>=0.5.4 
    numpy>=1.19 
    opencv_python>=4.8.0.76 
    pillow>10.0.0 
    pymavlink>=2.4.20 
    PyYAML>=5.4.1 
    pyserial>=3.5 
    fs>=2.4.16 
    toml>=0.10.2  
    colorlog>=6.7.0 
    # pynput>=1.7.3 
    # msgpack-rpc-python>=0.4.0 
    PySimpleGUI==4.59.0 
    psutil>=5.8.0 
    # mavcom @ git+https://github.com/johnnewto/mavcom#egg=mavcom
    # gstreamer-python @ git+https://github.com/johnnewto/gstreamer-python.git#egg=gstreamer-python
    UAV @ git+https://github.com/johnnewto/UAV.git#egg=UAV

[options.packages.find]
where=src    

[options.entry_points]
console_scripts = 
    runserver = UAV_jetson.run_server:main
    rungui = UAV_gui.run_client_gui:main

[options.extras_require]
# notebook = 
#     jupyter >= 1.0.0
#     matplotlib

dev = 
    black == 22.1.0
    flake8 == 4.0.1

[options.package_data]
# UAV_jetson = 
#     data/schema.json
#     *.txt
* = README.md

